<resources>
    <!-- General App -->
    <string name="app_name" translatable="false">Cine Pople</string>

    <!-- Button -->
    <string name="btn_submit">SUBMIT</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="btn_select_session">SELECT SESSION</string>
    <string name="btn_next">NEXT</string>
    <string name="btn_continue">CONTINUE</string>
    <string name="btn_infomation">INFORMATION</string>
    <string name="btn_info">INFO</string>
    <string name="btn_book">BOOK</string>
    <string name="btn_cancel">CANCEL</string>

    <!-- Accessibility (Content Descriptions for images) -->
    <string name="description_btn_return" translatable="false">Button Return</string>
    <string name="description_btn_next" translatable="false">Button Next</string>
    <string name="description_logo_app" translatable="false">Cine Pople Logo</string>
    <string name="description_logo_facebook" translatable="false">Facebook Logo</string>
    <string name="description_logo_google" translatable="false">Google Logo</string>
    <string name="description_logo_other">Other</string>

    <!-- EditText -->
    <string name="lb_email" translatable="false">Email</string>
    <string name="hint_email">Enter email</string>

    <string name="lb_password">Password</string>
    <string name="hint_password">Enter password</string>

    <string name="lb_confirm_password">Confirm password</string>
    <string name="hint_confirm_password">Enter password</string>

    <string name="lb_fullname">Full Name</string>
    <string name="hint_fullname">Enter your fullname</string>

    <string name="lb_phone">Phone Number</string>
    <string name="hint_phone">Enter your phone</string>

    <string name="lb_gender">Gender</string>
    <string name="hint_gender">Select gender</string>

    <string name="lb_birthday">Birthday</string>
    <string name="hint_birthday">Select your birthday</string>

    <string name="hint_comment">Your Comment</string>

    <!-- Login -->
    <string name="login_title">Login to your account</string>

    <string name="login_checkbox_remember_me">Remember me</string>
    <string name="link_forgot_password">Forgot your password?</string>

    <!-- Facebook -->
<!--    <string name="facebook_app_id">2247219395758210</string>-->
<!--    <string name="facebook_client_token">7e4f6ecaa5652dacd8ebdf52a16e9c13</string>-->

    <!-- FACEBOOK LOGIN PROTOCOL SCHEME -->
    <string name="fb_login_protocol_scheme">fb1922996301971245</string>

    <!-- Google -->
<!--    <string name="default_web_client_id">-->
<!--        797797873300-omolfq7mmff7n2f5kuj46t9oi7k0ciot.apps.googleusercontent.com-->
<!--    </string>-->


    <string name="login_seperate_or_login_with">Or login with</string>

    <string name="login_promt_no_account">Don\'t have an account?</string>
    <string name="link_sign_up">Sign up</string>

    <!-- Sign up -->
    <string name="signup_title">Create your account</string>
    <string name="signup_subtitle">Sign up to unlock a world of movie and seamless ticket booking</string>

    <string name="sign_up_checkbox_agree_license">I agree to Cine Pople</string>
    <string name="link_license">Term &amp; Condition</string>

    <string name="sign_up_promt_already_have_account">Already have an account?</string>
    <string name="link_sign_in">Sign in</string>

    <!-- Forgot password -->
    <string name="forgot_password_title">FORGOT PASSWORD</string>
    <string name="forgot_password_subtitle">Please enter your email address. We will send an OTP code to verify.</string>

    <!-- OTP -->
    <string name="Otp_title">FORGOT PASSWORD</string>
    <string name="Otp_subtitle">Please enter your email address. We will send an OTP code to verify.</string>

    <!-- Main -->
    <!-- Home Fragment -->
    <string name="main_tag_home">Home</string>
        <string name="top_movies">Top Movies</string>
        <string name="now_playing">Now Playing</string>
        <string name="coming_soon">Coming Soon</string>
        <string name="view_all">View All</string>

    <!-- Profile Fragment -->
    <string name="main_profile_tag">Account</string>
        <string name="profile_link_watchlist">Watchlist</string>
        <string name="profile_link_payment">Payment Methods</string>

        <string name="profile_seperate_general">General</string>
            <string name="profile_link_personal_info">Personal Info</string>
            <string name="profile_link_security">Security</string>
            <string name="profile_link_language">Language</string>
            <string name="profile_link_mode">Dark Mode</string>
            <string name="profile_link_help">Help Center</string>

        <string name="profile_seperate_about">About</string>
                <string name="profile_link_info">About Cine Pople</string>
                <string name="profile_logout">Logout</string>

<!--    Dialog -->
    <string name="dialog_login_required_title">Login Required</string>
    <string name="dialog_login_required_message">You must log in to proceed with booking tickets. Please log in or create a new account.</string>"

</resources>