<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/background_color"
    tools:context=".fragment.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fixed_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@color/background_color"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:shapeAppearanceOverlay="@style/CircularShapeAppearance"
                app:srcCompat="@mipmap/ic_logo_round" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/description_btn_return"
                android:background="@drawable/ic_noti"
                android:backgroundTint="@color/text_color"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fixed_header_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal">

                    <TextView style="@style/TitleTextStyle"
                        android:text="@string/top_movies" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/top_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/viewpager_top_movies"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:paddingStart="60dp"
                        android:paddingEnd="60dp"
                        android:elevation="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" tools:visibility="visible"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/layout_info_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingVertical="10dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_movie_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:textColor="@color/text_color"
                            android:textSize="18sp"
                            tools:text="The Batman" />

                        <TextView
                            android:id="@+id/tv_movie_duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_medium"
                            android:textColor="@color/text_color"
                            android:textSize="12sp"
                            tools:text="63 h 36 m 36 s" />
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton style="@style/MyButton.Primary"
                        android:id="@+id/btn_book_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:paddingVertical="10dp"
                        android:text="@string/btn_book"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp">

                    <TextView style="@style/TitleTextStyle"
                        android:id="@+id/tv_title_now_playing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="Now Playing" />

                    <LinearLayout
                        android:id="@+id/btn_view_all_now_playing"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView style="@style/ViewAllTextStyle"
                            android:gravity="center_vertical" />

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center_vertical"
                            android:backgroundTint="@color/main_color"
                            android:contentDescription="@string/description_btn_next"
                            android:rotation="180"
                            android:src="@drawable/ic_return"
                            app:tint="@color/main_color"/>
                    </LinearLayout>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView style="@style/HorizontalRecyclerViewStyle"
                    android:id="@+id/recycler_now_playing"
                    android:layout_height="225dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp">

                    <TextView style="@style/TitleTextStyle"
                        android:id="@+id/tv_title_coming_soon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/coming_soon" />

                    <LinearLayout
                        android:id="@+id/btn_view_all_coming_soon"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView style="@style/ViewAllTextStyle"
                            android:gravity="center_vertical" />

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center_vertical"
                            android:backgroundTint="@color/main_color"
                            android:contentDescription="@string/description_btn_next"
                            android:rotation="180"
                            android:src="@drawable/ic_return"
                            app:tint="@color/main_color"/>
                    </LinearLayout>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView style="@style/HorizontalRecyclerViewStyle"
                    android:id="@+id/recycler_coming_soon"
                    android:layout_height="225dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"/>
        </LinearLayout>



    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>